--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="./recipes/chickenbiriyani.html"> Easy Chicken Biriyani</a>
+    <a href="./recipes/chickenbiriyani.html">Easy Chicken Biryani</a>
 
 </body>
 </html>
