Added Basic Lentils recipe content

--- a/recipes/lentils.html
+++ b/recipes/lentils.html
@@ -6,9 +6,40 @@
     <title>Odin Project - Assignement 1</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Basic Lentils</h1>
 
-    <a href="./recipes/chickenbiriyani.html">Easy Chicken Biryani</a>
+    <img src="../images/lentils.jpg"alt="Basic Lentils" height="310" width="310">
+    <h4>A yummy batch of Basic Lentils!</h4>
+
+    <p>
+        Make our tasty lentil recipe and use it as a base to make three more fabulous dishes. By itself it's a tasty vegan, low-fat and gluten-free meal
+    </p>
+
+    <h4>Ingredients:</h4>
+
+        <ul>
+            <li>2 tbsp coconut oil</li>
+            <li>2 onions, chopped</li>
+            <li>4 garlic cloves, chopped</li>
+            <li>large piece of ginger, chopped</li>
+            <li>300g red split lentils</li>
+            <li>1 tsp turmeric</li>
+            <li>2 tomatoes, roughly chopped</li>
+            <li>1 tsp coriander seeds</li>
+            <li>1 tsp cumin seeds</li>
+            <li>1 tsp black mustard seeds</li>
+            <li>1 lemon, juiced</li>
+        </ul>
+
+    <h4>Steps:</h4>
+
+        <ol>
+            <li>Melt 1 tbsp coconut oil in a large saucepan. Add the onion and a pinch of salt, and cook for 8 mins.</li>
+            <li>Stir in the garlic and ginger and cook for a few mins more.</li>
+            <li>Add the lentils, turmeric and tomatoes, stir to combine, then pour in 1 litre of water.</li>
+            <li>Bring to the boil, then turn down and simmer for 25-30 mins, stirring occasionally, until the lentils are tender.</li>
+            <li>Heat the rest of the oil in a frying pan. When it’s very hot, add the spices and fry for a min or so until fragrant, then stir them through. Add the lemon juice and season to taste. Will keep for four days in the fridge, or freeze it in batches and use to make our lentil kedgeree, lentil fritters, or spinach dhal with harissa yogurt.</li>
+        </ol>
 
 </body>
 </html>
