--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="./recipes/chickenbiriyani.html">Easy Chicken Biryani</a>
-    <a href="./recipes/bolognaise.html">Basic Bolognaise</a>
-    <a href="./recipes/lentils.html">Basic Lentils</a>
+    <ul>
+        <li><a href="./recipes/chickenbiriyani.html">Easy Chicken Biryani</a></li>
+        <li><a href="./recipes/bolognaise.html">Basic Bolognaise</a></li>
+        <li><a href="./recipes/lentils.html">Basic Lentils</a></li>
+    </ul>
 
 </body>
 </html>
