Updated Steps for Bolognaise recipe

--- a/recipes/bolognaise.html
+++ b/recipes/bolognaise.html
@@ -37,8 +37,15 @@
 
     <h4>Steps:</h4>
         <ol>
-            <li>Heat the oil in a very large saucepan. Gently cook the bacon, onions, carrots and celery for 20 mins until golden. Add the garlic, herbs, bay and mushrooms, then cook for 2 mins more.</li>
-            <li>Heat a large frying pan until really hot. Crumble in just enough mince to cover the pan, cook until brown, then tip in with the veg. Continue to fry the mince in batches until used up. Tip the tomatoes and purée in with the mince and veg. Rinse the cans out with the red wine, if you have some, or with a little water, then add to the pan with the vinegar and sugar. Season generously and bring to a simmer. Simmer slowly for 1 hr until thick and saucy and the mince is tender. Serve with pasta and parmesan.</li>
+            <li>Heat the oil in a very large saucepan. Gently cook the bacon, onions, carrots and celery for 20 mins until golden.</li>
+            <li>Add the garlic, herbs, bay and mushrooms, then cook for 2 mins more.</li>
+            <li>Heat a large frying pan until really hot.</li>
+            <li>Crumble in just enough mince to cover the pan, cook until brown, then tip in with the veg.</li>
+            <li>Continue to fry the mince in batches until used up.</li>
+            <li>Tip the tomatoes and purée in with the mince and veg.</li>
+            <li>Rinse the cans out with the red wine, if you have some, or with a little water, then add to the pan with the vinegar and sugar.</li>
+            <li>Season generously and bring to a simmer. Simmer slowly for 1 hr until thick and saucy and the mince is tender.</li>
+            <li>Serve with pasta and parmesan.</li>
         </ol>
         
 </body>
