Added link to Index on recipe page

--- a/recipes/bolognaise.html
+++ b/recipes/bolognaise.html
@@ -47,6 +47,8 @@
             <li>Season generously and bring to a simmer. Simmer slowly for 1 hr until thick and saucy and the mince is tender.</li>
             <li>Serve with pasta and parmesan.</li>
         </ol>
+
+        <a href="../index.html">All Recipes</a>
         
 </body>
 </html>
