--- a/recipes/chickenbiriyani.html
+++ b/recipes/chickenbiriyani.html
@@ -40,9 +40,9 @@
             <li>Stir the rice into the pan with 85g raisins, then pour over 850ml chicken stock.</li>
             <li>Place a tight-fitting lid on the pan and bring to a hard boil, then lower the heat to a minimum and cook the rice for another 5 mins.</li>
             <li>Turn off the heat and leave for 10 mins. Stir well, mixing through 15g chopped coriander. To serve, scatter over the leaves of the remaining 15g coriander and 2 tbsp toasted almonds.</li>
-            
-            
         </ol>
+
+        <a href="../index.html">All Recipes</a>
 
 </body>
 </html>
