--- a/recipes/lentils.html
+++ b/recipes/lentils.html
@@ -41,5 +41,7 @@
             <li>Heat the rest of the oil in a frying pan. When it’s very hot, add the spices and fry for a min or so until fragrant, then stir them through. Add the lemon juice and season to taste. Will keep for four days in the fridge, or freeze it in batches and use to make our lentil kedgeree, lentil fritters, or spinach dhal with harissa yogurt.</li>
         </ol>
 
+        <a href="../index.html">All Recipes</a>
+        
 </body>
 </html>
